rewrite 1st para in Intro, #15

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -85,20 +85,35 @@ Tetsuya Akita$^{a}$\thanks{
 
 \section{INTRODUCTION}
 
-%conn & bravington も引用しないと
+
+
+%conn & bravington , Trenkel & bravingtonも引用しないと
 % MigEst by Wangとの比較も...もう一度よくWang 2014を読む！どうやって推定しているのか...
 %% 今回提案した方法は、ゴーストポップがあっても大丈夫
 %% MigEstは、親は動かず、子が移動することを想定している
 %% N = Neを想定
-
 %移動には２種類ある。子の移動と親の移動である。前者は花粉やラーバなど。connectivityは前者が大事かもで、どこまで遠く行くのかも重要。移動する生物の場合、後者も重要。
 
-Estimating the number of migrants among the populations is essential for understanding population structure and dynamics. 
+
+
+% 1: Estimating migration is important for both ecologically and evolutionally reasons
+
+In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and for proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between populations, is a critical component to determine the current degree of synchrony among the population, which characterize the population structure and then provides information to identify appropriate management units \cite[]{Waples_2006_MolEcol, PALSBOLL200711}. In addition, \RED{KOKOMADE}
+
+
+, estimating a speed of habitat expansion,  the effective reserve network design, population restoration, and invasive species control. 
+
+
+of organism number of migrants between populations is essential for understanding population structure in conservation and wildlife management. , and its history, which provides . 
 
 , which is a fundamental process for implementing conservation and wildlife management. Especially in fisheries management, migration rate is a critical component for delineating a synchrony among the population, providing appropriate management units. 
 
-% 近年の移動率の推定には大きく２種類に分類される。１つ目は遺伝マーカーに基づく集団遺伝学的な解析。２つ目は標識採捕の枠組みの解析。
 
+% 2: Mark recapture method can handle ecological scale but may miss the small migration rate
+% 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
+% 4: CKMR can cover the range that Mark recapture can handle with more realistic situations
+% 5: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
+% 6: In this paper, ~
 
 There are essentially two approaches for estimating the migrant number. The first is to use the mark-recapture method estimate it directly from the population dynamics modeling with survey data. The second is to ...
 
