done 1st para in Intro, #15

--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-01-19 14:39:06 +0900 
+%% Created for Tetsuya Akita at 2022-01-31 18:08:29 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{moritz1994defining,
+	author = {Moritz, Craig},
+	date-added = {2022-01-31 17:41:30 +0900},
+	date-modified = {2022-01-31 17:41:30 +0900},
+	journal = {Trends in ecology \& evolution},
+	number = {10},
+	pages = {373--375},
+	publisher = {Citeseer},
+	title = {Defining `evolutionarily significant units' for conservation},
+	volume = {9},
+	year = {1994}}
 
 @article{Wang_2009Genetics,
 	abstract = {{Likelihood methods have been developed to partition individuals in a sample into sibling clusters using genetic marker data without parental information. Most of these methods assume either both sexes are monogamous to infer full sibships only or only one sex is polygamous to infer full sibships and paternal or maternal (but not both) half sibships. We extend our previous method to the more general case of both sexes being polygamous to infer full sibships, paternal half sibships, and maternal half sibships and to the case of a two-generation sample of individuals to infer parentage jointly with sibships. The extension not only expands enormously the scope of application of the method, but also increases its statistical power. The method is implemented for both diploid and haplodiploid species and for codominant and dominant markers, with mutations and genotyping errors accommodated. The performance and robustness of the method are evaluated by analyzing both simulated and empirical data sets. Our method is shown to be much more powerful than pairwise methods in both parentage and sibship assignments because of the more efficient use of marker information. It is little affected by inbreeding in parents and is moderately robust to nonrandom mating and linkage of markers. We also show that individually much less informative markers, such as SNPs or AFLPs, can reach the same power for parentage and sibship inferences as the highly informative marker simple sequence repeats (SSRs), as long as a sufficient number of loci are employed in the analysis.}},
