--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -94,22 +94,19 @@ Tetsuya Akita$^{a}$\thanks{
 %% N = Neを想定
 %移動には２種類ある。子の移動と親の移動である。前者は花粉やラーバなど。connectivityは前者が大事かもで、どこまで遠く行くのかも重要。移動する生物の場合、後者も重要。
 
+%contemporary migration rateはほとんどBaysAssを使っている人の用語
 
+% 1: Estimating contemporary migration is important for both ecologically and evolutionally reasons
 
-% 1: Estimating migration is important for both ecologically and evolutionally reasons
+In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow \cite[]{Crow:1970fk} and synchrony among the population \cite[]{Hastings_1993}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units \cite[ESUs,][]{moritz1994defining} and identify appropriate management units \cite[]{Waples_2006_MolEcol, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including species range expansion/construction (REF), effective reserve network design (REF), and the invasive species control (REF). 
 
-In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and for proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between populations, is a critical component to determine the current degree of synchrony among the population, which characterize the population structure and then provides information to identify appropriate management units \cite[]{Waples_2006_MolEcol, PALSBOLL200711}. In addition, \RED{KOKOMADE}
-
-
-, estimating a speed of habitat expansion,  the effective reserve network design, population restoration, and invasive species control. 
-
-
-of organism number of migrants between populations is essential for understanding population structure in conservation and wildlife management. , and its history, which provides . 
-
-, which is a fundamental process for implementing conservation and wildlife management. Especially in fisheries management, migration rate is a critical component for delineating a synchrony among the population, providing appropriate management units. 
-
+ \RED{KOKOMADE}
 
 % 2: Mark recapture method can handle ecological scale but may miss the small migration rate
+
+There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that directly estimates parameters of the population.
+
+
 % 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
 % 4: CKMR can cover the range that Mark recapture can handle with more realistic situations
 % 5: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
