--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -98,21 +98,17 @@ Tetsuya Akita$^{a}$\thanks{
 
 % 1: Estimating contemporary migration is important for both ecologically and evolutionally reasons
 
-In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units \cite[ESUs,][]{moritz1994defining} and identify appropriate management units \cite[]{PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including stock assessment in fisheries \cite[]{methot2013stock}, species range expansion/construction (REF), effective reserve network design (REF), and the invasive species control (REF). 
+In conservation and wildlife management, estimating the current ecological information is essential for monitoring population levels and proposing management strategies. Contemporary migration rate, the recent rate of movement of individuals or gametes between pre-defined populations, is a critical component to determine the current degree of gene flow and synchrony among the population \cite[]{Waples_2006_MolEcol}. Therefore, estimation of contemporary migration rate provides information about the degree of genetic differentiation and demographic dependency, which can delineate evolutionarily significant units and identify appropriate management units \cite[]{moritz1994defining, PALSBOLL200711}. In addition, the availability of migration rate can link to underlying population dynamics, allowing for a more precise and flexible evaluation of a management for many relevant topics including stock assessment in fisheries \cite[]{methot2013stock}, species range expansion/construction (REF), effective reserve network design (REF), and the invasive species control (REF). 
 
 % 2: Mark recapture method can handle ecological scale but may miss the small migration rate
 
-There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that directly estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally suffering from several sources of uncertainties, e.g., reporting rate and tagging-involved mortality (REF). In addition, 
-
-% 様々な不確実性だけでなく、応用の範囲が限られている
-
-
-Direct estimates of migration parameters can be obtained using purely ecological approaches such as mark-release–recapture methods (MRR), but they have the inconvenience of being time consuming and impractical for the study of large and/or spatially extended metapop- ulations. 
-
+There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that directly estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and reporting rate (REF). In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
 
  \RED{KOKOMADE}
 
 % 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
+
+
 % 4: CKMR can cover the range that Mark recapture can handle with more realistic situations
 % 5: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 % 6: In this paper, ~
