write 3rd para in Intro, #15

--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,12 +1,48 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-01-31 18:08:29 +0900 
+%% Created for Tetsuya Akita at 2022-02-02 19:01:25 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wilson_2003,
+	abstract = {{A new Bayesian method that uses individual multilocus genotypes to estimate rates of recent immigration (over the last several generations) among populations is presented. The method also estimates the posterior probability distributions of individual immigrant ancestries, population allele frequencies, population inbreeding coefficients, and other parameters of potential interest. The method is implemented in a computer program that relies on Markov chain Monte Carlo techniques to carry out the estimation of posterior probabilities. The program can be used with allozyme, microsatellite, RFLP, SNP, and other kinds of genotype data. We relax several assumptions of early methods for detecting recent immigrants, using genotype data; most significantly, we allow genotype frequencies to deviate from Hardy-Weinberg equilibrium proportions within populations. The program is demonstrated by applying it to two recently published microsatellite data sets for populations of the plant species Centaurea corymbosa and the gray wolf species Canis lupus. A computer simulation study suggests that the program can provide highly accurate estimates of migration rates and individual migrant ancestries, given sufficient genetic differentiation among populations and sufficient numbers of marker loci.}},
+	author = {Wilson, Gregory A and Rannala, Bruce},
+	date-added = {2022-02-02 19:01:15 +0900},
+	date-modified = {2022-02-02 19:01:24 +0900},
+	doi = {10.1093/genetics/163.3.1177},
+	eprint = {https://academic.oup.com/genetics/article-pdf/163/3/1177/42048248/genetics1177.pdf},
+	issn = {1943-2631},
+	journal = {Genetics},
+	month = {03},
+	number = {3},
+	pages = {1177-1191},
+	title = {{Bayesian Inference of Recent Migration Rates Using Multilocus Genotypes}},
+	url = {https://doi.org/10.1093/genetics/163.3.1177},
+	volume = {163},
+	year = {2003},
+	bdsk-url-1 = {https://doi.org/10.1093/genetics/163.3.1177}}
+
+@article{Pritchard_2000,
+	abstract = {{We describe a model-based clustering method for using multilocus genotype data to infer population structure and assign individuals to populations. We assume a model in which there are K populations (where K may be unknown), each of which is characterized by a set of allele frequencies at each locus. Individuals in the sample are assigned (probabilistically) to populations, or jointly to two or more populations if their genotypes indicate that they are admixed. Our model does not assume a particular mutation process, and it can be applied to most of the commonly used genetic markers, provided that they are not closely linked. Applications of our method include demonstrating the presence of population structure, assigning individuals to populations, studying hybrid zones, and identifying migrants and admixed individuals. We show that the method can produce highly accurate assignments using modest numbers of loci---e.g., seven microsatellite loci in an example using genotype data from an endangered bird species. The software used for this article is available from http://www.stats.ox.ac.uk/~pritch/home.html.}},
+	author = {Pritchard, Jonathan K and Stephens, Matthew and Donnelly, Peter},
+	date-added = {2022-02-02 18:32:52 +0900},
+	date-modified = {2022-02-02 18:33:10 +0900},
+	doi = {10.1093/genetics/155.2.945},
+	eprint = {https://academic.oup.com/genetics/article-pdf/155/2/945/42030266/genetics0945.pdf},
+	issn = {1943-2631},
+	journal = {Genetics},
+	month = {06},
+	number = {2},
+	pages = {945-959},
+	title = {{Inference of Population Structure Using Multilocus Genotype Data}},
+	url = {https://doi.org/10.1093/genetics/155.2.945},
+	volume = {155},
+	year = {2000},
+	bdsk-url-1 = {https://doi.org/10.1093/genetics/155.2.945}}
 
 @article{moritz1994defining,
 	author = {Moritz, Craig},
