--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -102,18 +102,21 @@ In conservation and wildlife management, estimating the current ecological infor
 
 % 2: Mark recapture method can handle ecological scale but may miss the small migration rate
 
-There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that directly estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and reporting rate (REF). In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
-
- \RED{KOKOMADE}
+There are essentially two approaches for estimating the contemporary migration rate. The first is to use the mark-recapture (MR) method that estimates migration rate along with other population parameters \cite[]{kery2011bayesian, Thorson_2021}. The rational is that, for example, conventional tags provide release and recovery location at known release and recovery dates, generating a movement fraction matrix among strata per given time interval. While this direct method is relatively easy to interpret, it is generally hampered by several sources of uncertainties, e.g., tag loss, tagging-related mortality, and reporting rate (REF). In addition, the MR method for estimating migration rate is generally limited in practice to situations where collection of a sufficient number of adult sample at multiple sites in a short period is available. 
 
 % 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
 
+The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{Pritchard_2000}. The model of \cite{Wilson_2003}, which is an one of such population assignment (PA) methods, can output point estimates of a current migration matrix. However, 
+
+ \RED{KOKOMADE}
+
+%pop assiginment method だと、mが結構大きい場合は検出されない。Hastingsが言っているような0.1よりも大きい時
 
 % 4: CKMR can cover the range that Mark recapture can handle with more realistic situations
 % 5: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 % 6: In this paper, ~
 
-There are essentially two approaches for estimating the migrant number. The first is to use the mark-recapture method estimate it directly from the population dynamics modeling with survey data. The second is to ...
+The inference model implemented by bayesass assumes linkage equilibrium but allows for deviations from Hardy– Weinberg equilibrium by estimating population-specific inbreeding coefficients. Migration rates among populations can be asymmetric but are constant over short periods of time (two generations). Additionally, it is assumed that migration rates are small (see Appendix A in Wilson  Rannala 2003). These two latter assumptions impose a constraint on the range of migration rates that can be considered by the method. More precisely, the total proportion of migrant individuals into a population per generation cannot exceed 1,3. Thus, nonmigrant proportions must be in the interval 2,3 to 1. The method also assumes that genetic drift and migration during the last few generations do not change subpopulation allele frequencies.
 
 移動率の推定は，対象生物の理解に重要なだけでなく，外来種管理・希少種保全・資源の持続的利用にとっても重要である。　特に、水産資源管理にとっては、管理単位を決めるための指標として、移動率はクリティカルな指標の一つである。既存の方法論としては，大きく２種類に大別される。１つ目は標識再捕法であり，２つ目は集団遺伝学的な方法である。前者については，サンプル対象を再捕獲が見込める親個体に限定せざるを得ない，非侵襲的な方法でのラベリングが困難であること，推定精度に見合うサンプルサイズが現実的でないこと，報告率が大きくばらつく等が問題となっている。後者については，近年(すなわち$N_{\rm e}$よりも短い世代数)の集団構造については解像度がないこと，移動個体数が大きいと遺伝的には同一の集団とみなされること等が問題となっている。
 
