--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -106,17 +106,19 @@ There are essentially two approaches for estimating the contemporary migration r
 
 % 3: Population genetics method can handle evolutionally scale but may miss the large migration rate
 
-The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{Pritchard_2000}. The model of \cite{Wilson_2003}, which is an one of such population assignment (PA) methods, can output point estimates of a current migration matrix. However, 
-
- \RED{KOKOMADE}
-
-%pop assiginment method だと、mが結構大きい場合は検出されない。Hastingsが言っているような0.1よりも大きい時
+The second is to use numerous genetic markers to assign individuals to source populations, allowing the inference of recent migration \cite[since][]{Pritchard_2000}. The model of \cite{Wilson_2003}, which is one of such population assignment (PA) methods and implemented in a software BayesAss, can output the point estimate as an element of a current migration matrix. However, as evaluated by several authors \cite[]{https://doi.org/10.1111/j.1365-294X.2007.03218.x, https://doi.org/10.1111/mec.12806}, the accuracy of estimated migration rates by the model is valid only when populations are highly differentiated ($F_{\rm ST}\ge0.05$), suggesting that it may be difficult to infer the degree of demographic dependency among populations since demographic independency is realized even if there are many migrants.  
 
 % 4: CKMR can cover the range that Mark recapture can handle with more realistic situations
+
+Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the information about kinship in a sample, owing to the recent advances in genetic methods for kinship determination \cite[]{https://doi.org/10.1111/faf.12615}. 
+
+
+This was possible owing to the recent advances in genetic methods for kinship determination \cite[]{Bravington_2016,bravington2016close,skaug2017parent,Hillary_2018} although similar methods have been proposed in the beginning of the 21st century \cite[]{nielsen2001statistical, pearse2001genetic, julius2001allele}. Besides, the rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect $N$. While the original CKMR is designed to estimate adult abundance (i.e., $N$), the monitoring data for CKMR also produce the estimator of $N_{\rm e}$ by detecting half-sibling (HS) pairs within the same cohort \cite[]{Akita_2019}. This kinship-oriented estimation of $N_{\rm e}$ was presented in the context of the sibship assignment method \cite[]{wang2009new} and is expected to provide a much more accurate estimator as kinship determination becomes more accurate. 
+
+
 % 5: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
 % 6: In this paper, ~
 
-The inference model implemented by bayesass assumes linkage equilibrium but allows for deviations from Hardy– Weinberg equilibrium by estimating population-specific inbreeding coefficients. Migration rates among populations can be asymmetric but are constant over short periods of time (two generations). Additionally, it is assumed that migration rates are small (see Appendix A in Wilson  Rannala 2003). These two latter assumptions impose a constraint on the range of migration rates that can be considered by the method. More precisely, the total proportion of migrant individuals into a population per generation cannot exceed 1,3. Thus, nonmigrant proportions must be in the interval 2,3 to 1. The method also assumes that genetic drift and migration during the last few generations do not change subpopulation allele frequencies.
 
 移動率の推定は，対象生物の理解に重要なだけでなく，外来種管理・希少種保全・資源の持続的利用にとっても重要である。　特に、水産資源管理にとっては、管理単位を決めるための指標として、移動率はクリティカルな指標の一つである。既存の方法論としては，大きく２種類に大別される。１つ目は標識再捕法であり，２つ目は集団遺伝学的な方法である。前者については，サンプル対象を再捕獲が見込める親個体に限定せざるを得ない，非侵襲的な方法でのラベリングが困難であること，推定精度に見合うサンプルサイズが現実的でないこと，報告率が大きくばらつく等が問題となっている。後者については，近年(すなわち$N_{\rm e}$よりも短い世代数)の集団構造については解像度がないこと，移動個体数が大きいと遺伝的には同一の集団とみなされること等が問題となっている。
 
@@ -327,6 +329,8 @@ There may be several cases where it is desirable to apply the proposed estimator
 
 Finally, we note some caveats in applying proposed method. Our theory for developing estimators assumes that kinships are detected without any error. There are many algorithms to detect kinship pairs from single nucleotide polymorphisms (SNPs) or short tandem repeats (STRs) \cite[e.g., ][]{Wang_2009Genetics, Huisman_2017}, although a HS pair requires many more DNA markers than a PO pair. In addition, iteroprous species potentially has several kinship types such as halfsib-uncle/nephew or halfsib-cousin, which are expected to appear frequently and should be correctly distinguished from HS pairs. It is desirable to estimate in advance how many markers are needed for kinship detections in target populations associated with simulation of a pedigree reconstruction including distant kinships (e.g., \cite{Anderson_2020}). Our proposed estimators are limited to detect one-time parental movements on a period between breeding seasons in given populations. Thus, the estimation of fine-scale spatial-temporal movements, which is available to integrate multiple type of data \cite[]{Thorson_2021}, goes beyond the scope of this paper, although population dynamics models with a coarser spatial resolution than the spatial scale for environmental layers are often used in the assessment models, which is the target of application of the proposed method. In addition, the current theory behind the estimators does not assume desynchronized reproduction within a population (e.g., skip spawning) and correlation between mobility and fertility. Our proposed estimators require the pre-specification of a population structure. Kinship relationships with information of a sample location potentially provide the chance to explore a plausible population structure via estimating migration number or rate between hypothetical populations, which contributes the determination of a management unit \cite[]{Hastings_1993, Waples_2006_MolEcol, PALSBOLL200711}. This perspective of the study will be conducted in the future.
 
+%  (e.g., \cite{Hastings_1993} numerically demonstrates that two populations become demographically independent when migration rate $< 0.1$)
+% withinのデータはどう使う？？
 %PRE-DEFINED population !
 %Caveat: selectivity, family correlated migration、skip spawning, 
 
