write 4th  para in Intro, #15

--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,12 +1,46 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-02-03 16:44:55 +0900 
+%% Created for Tetsuya Akita at 2022-02-07 15:07:05 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{10.1093/icesjms/fsac002,
+	abstract = {{We present practical lessons learned from applying the recent close-kin mark--recapture (CKMR) abundance estimation method to thornback ray (Raja clavata). For CKMR, related individuals are identified from their genotypes and their number and pattern is used for abundance estimation. We genotyped over 7000 individuals collected in the Bay of Biscay using Single Nucleotide Polymorphism (SNP) markers finding 99 parent--offspring pairs. The estimated number of adult thornback rays in the central Bay of Biscay was around 135000 (CV 0.19) in 2013. In total, four lessons were drawn: (i) CKMR helps identifying metapopulation structure, which if ignored might affect abundance estimates and/or time trends. There was strong evidence for two distinct local populations of thornback ray with no demographic connectivity. (ii) Demographic sample composition can affect precision and needs to include a range of birth years, which turned out to be difficult for thornback ray. (iii) Reasonable age information for potential offspring is essential. (iv) The sex of potential parents is needed and might be identified from sex-related SNPs. Reliable abundance estimation by CKMR appears feasible for a wide range of species provided that: sampling adequately covers potential local population structure, has appropriate demographic composition, and the age of potential offspring is reasonably well-known.}},
+	author = {Trenkel, Verena M and Charrier, Gr{\'e}gory and Lorance, Pascal and Bravington, Mark V},
+	date-added = {2022-02-07 15:06:23 +0900},
+	date-modified = {2022-02-07 15:06:23 +0900},
+	doi = {10.1093/icesjms/fsac002},
+	eprint = {https://academic.oup.com/icesjms/advance-article-pdf/doi/10.1093/icesjms/fsac002/42257559/fsac002.pdf},
+	issn = {1054-3139},
+	journal = {ICES Journal of Marine Science},
+	month = {01},
+	note = {fsac002},
+	title = {{Close-kin mark--recapture abundance estimation: practical insights and lessons learned}},
+	url = {https://doi.org/10.1093/icesjms/fsac002},
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.1093/icesjms/fsac002}}
+
+@article{https://doi.org/10.1002/ece3.6296,
+	abstract = {Abstract Close-kin mark--recapture (CKMR) is a method for estimating abundance and vital rates from kinship relationships observed in genetic samples. CKMR inference only requires animals to be sampled once (e.g., lethally), potentially widening the scope of population-level inference relative to traditional monitoring programs. One assumption of CKMR is that, conditional on individual covariates like age, all animals have an equal probability of being sampled. However, if genetic data are collected opportunistically (e.g., via hunters or fishers), there is potential for spatial variation in sampling probability that can bias CKMR estimators, particularly when genetically related individuals stay in close proximity. We used individual-based simulation to investigate consequences of dispersal limitation and spatially biased sampling on performance of naive (nonspatial) CKMR estimators of abundance, fecundity, and adult survival. Population dynamics approximated that of a long-lived mammal species subject to lethal sampling. Naive CKMR abundance estimators were relatively unbiased when dispersal was unconstrained (i.e., complete mixing) or when sampling was random or subject to moderate levels of spatial variation. When dispersal was limited, extreme variation in spatial sampling probabilities negatively biased abundance estimates. Reproductive schedules and survival were well estimated, except for survival when adults could emigrate out of the sampled area. Incomplete mixing was readily detected using Kolmogorov--Smirnov tests. Although CKMR appears promising for estimating abundance and vital rates with opportunistically collected genetic data, care is needed when dispersal limitation is coupled with spatially biased sampling. Fortunately, incomplete mixing is easily detected with adequate sample sizes. In principle, it is possible to devise and fit spatially explicit CKMR models to avoid bias under dispersal limitation, but development of such models necessitates additional complexity (and possibly additional data). We suggest using simulation studies to examine potential bias and precision of proposed modeling approaches prior to implementing a CKMR program.},
+	author = {Conn, Paul B. and Bravington, Mark V. and Baylis, Shane and Ver Hoef, Jay M.},
+	date-added = {2022-02-07 15:06:12 +0900},
+	date-modified = {2022-02-07 15:06:12 +0900},
+	doi = {https://doi.org/10.1002/ece3.6296},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.6296},
+	journal = {Ecology and Evolution},
+	keywords = {abundance estimation, incomplete mixing, sampling bias, spatial heterogeneity},
+	number = {12},
+	pages = {5558-5569},
+	title = {Robustness of close-kin mark--recapture estimators to dispersal limitation and spatially varying sampling probabilities},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.6296},
+	volume = {10},
+	year = {2020},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.6296},
+	bdsk-url-2 = {https://doi.org/10.1002/ece3.6296}}
 
 @article{https://doi.org/10.1111/faf.12615,
 	abstract = {Abstract The last two decades have witnessed rapid developments and increasing interest in use of: (1) genetic methods to estimate effective population size (Ne) and (2) close-kin mark--recapture (CKMR) methods to estimate abundance based on the incidence of close relatives. Whereas Ne estimation methods have been applied to a wide range of taxa, all CKMR applications to date have been for aquatic species. These two fields of inquiry have developed largely independently, and this is unfortunate because deeper insights can be gained by joint evaluation of eco-evolutionary processes. In this synthesis, we use simple analytical models and simulated pedigree data to illustrate how various factors (life-history traits; patterns of variation in individual reproductive success; experimental design; stochasticity; marker type) can affect the performance of the estimators. We show that the Ne/N ratio and the probability of a close-kin match both depend on a vector of parental weights that specify relative probabilities that different individuals will produce offspring. Although age-specific vital rates are central to both methodologies, for CKMR they can potentially bias abundance estimates unless properly accounted for, whereas they represent the signals of genetic drift that Ne estimation methods depend upon. Coordinating Ne and CKMR estimation methods using the same or overlapping datasets would facilitate joint evaluation of both the ecological and evolutionary consequences of abundance.},
