--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -110,10 +110,11 @@ The second is to use numerous genetic markers to assign individuals to source po
 
 % 4: CKMR can cover the range that Mark recapture can handle with more realistic situations
 
-Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the information about kinship in a sample, owing to the recent advances in genetic methods for kinship determination \cite[]{https://doi.org/10.1111/faf.12615}. 
+Close-kin mark-recapture (CKMR) is a recently developed method for estimating adult population size along with life-history parameters that utilizes the information about kinship in a sample, owing to the recent advances in genetic methods for kinship determination \cite[recently reviewed in][]{https://doi.org/10.1111/faf.12615}. The rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect an adult number in the population \cite[]{bravington2016close}. While recent studies of CKMR argued that availability of kinship information for applying estimation of migration rate \cite[]{https://doi.org/10.1002/ece3.6296, 10.1093/icesjms/fsac002}
 
+% 最近のConnの研究では、明示的に集団構造をCKMRの枠組みでキャプチャーしようとする枠組みについて議論されているが、その明示的な取り扱いやシミュレーションについては研究されていない。
 
-This was possible owing to the recent advances in genetic methods for kinship determination \cite[]{Bravington_2016,bravington2016close,skaug2017parent,Hillary_2018} although similar methods have been proposed in the beginning of the 21st century \cite[]{nielsen2001statistical, pearse2001genetic, julius2001allele}. Besides, the rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect $N$. While the original CKMR is designed to estimate adult abundance (i.e., $N$), the monitoring data for CKMR also produce the estimator of $N_{\rm e}$ by detecting half-sibling (HS) pairs within the same cohort \cite[]{Akita_2019}. This kinship-oriented estimation of $N_{\rm e}$ was presented in the context of the sibship assignment method \cite[]{wang2009new} and is expected to provide a much more accurate estimator as kinship determination becomes more accurate. 
+%This was possible owing to the recent advances in genetic methods for kinship determination \cite[]{Bravington_2016,bravington2016close,skaug2017parent,Hillary_2018} although similar methods have been proposed in the beginning of the 21st century \cite[]{nielsen2001statistical, pearse2001genetic, julius2001allele}. Besides, the rationale is that the presence of a kinship pair in the sample is analogous to the recapture of a marked individual in MR method. Kinship pairs in the sample are less likely to be observed in larger populations; thus, the number of kinship pairs may reflect $N$. While the original CKMR is designed to estimate adult abundance (i.e., $N$), the monitoring data for CKMR also produce the estimator of $N_{\rm e}$ by detecting half-sibling (HS) pairs within the same cohort \cite[]{Akita_2019}. This kinship-oriented estimation of $N_{\rm e}$ was presented in the context of the sibship assignment method \cite[]{wang2009new} and is expected to provide a much more accurate estimator as kinship determination becomes more accurate. 
 
 
 % 5: Wang 2014 can handle ecological scale with realistic situations but limited to offspring movement
@@ -330,7 +331,7 @@ There may be several cases where it is desirable to apply the proposed estimator
 Finally, we note some caveats in applying proposed method. Our theory for developing estimators assumes that kinships are detected without any error. There are many algorithms to detect kinship pairs from single nucleotide polymorphisms (SNPs) or short tandem repeats (STRs) \cite[e.g., ][]{Wang_2009Genetics, Huisman_2017}, although a HS pair requires many more DNA markers than a PO pair. In addition, iteroprous species potentially has several kinship types such as halfsib-uncle/nephew or halfsib-cousin, which are expected to appear frequently and should be correctly distinguished from HS pairs. It is desirable to estimate in advance how many markers are needed for kinship detections in target populations associated with simulation of a pedigree reconstruction including distant kinships (e.g., \cite{Anderson_2020}). Our proposed estimators are limited to detect one-time parental movements on a period between breeding seasons in given populations. Thus, the estimation of fine-scale spatial-temporal movements, which is available to integrate multiple type of data \cite[]{Thorson_2021}, goes beyond the scope of this paper, although population dynamics models with a coarser spatial resolution than the spatial scale for environmental layers are often used in the assessment models, which is the target of application of the proposed method. In addition, the current theory behind the estimators does not assume desynchronized reproduction within a population (e.g., skip spawning) and correlation between mobility and fertility. Our proposed estimators require the pre-specification of a population structure. Kinship relationships with information of a sample location potentially provide the chance to explore a plausible population structure via estimating migration number or rate between hypothetical populations, which contributes the determination of a management unit \cite[]{Hastings_1993, Waples_2006_MolEcol, PALSBOLL200711}. This perspective of the study will be conducted in the future.
 
 %  (e.g., \cite{Hastings_1993} numerically demonstrates that two populations become demographically independent when migration rate $< 0.1$)
-% withinのデータはどう使う？？
+% withinのデータはどう使う？？withinとbetweenを比較して、betweenが優位に少ないかどうかなどが構造発見につながるかもconn et al 2020 EcolEvolもチェック
 %PRE-DEFINED population !
 %Caveat: selectivity, family correlated migration、skip spawning, 
 
